[package]
name = "black_hole"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.5"
rayon = "1.11.0"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
wide = "0.7"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
